# ros2_electron_bridge_msgs

./: CMakeLists.txt  V2dAllStationInfo.sh  V2dCurrentStationInfo.sh  V2dVehicleInfo.sh  package.xml
msg/: Station.msg  V2dAllStationInfo.msg  V2dCurrentStationInfo.msg  V2dVehicleInfo.msg
